mediator/dart/lib/mediator/bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_field
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Int Function(ffi.Pointer<mediator_dart>, ffi.Pointer<mediator_module_dart_configuration>, ffi.Uint8)>(symbol: 'mediator_dart_initialize', assetId: 'mediator-bindings', isLeaf: true)
external int mediator_dart_initialize(
  ffi.Pointer<mediator_dart> mediator,
  ffi.Pointer<mediator_module_dart_configuration> configuration,
  int id,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<mediator_dart>)>(symbol: 'mediator_dart_peek', assetId: 'mediator-bindings', isLeaf: true)
external int mediator_dart_peek(
  ffi.Pointer<mediator_dart> mediator,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<mediator_dart>, ffi.Int, ffi.Pointer<mediator_message>)>(symbol: 'mediator_dart_call_native', assetId: 'mediator-bindings', isLeaf: true)
external void mediator_dart_call_native(
  ffi.Pointer<mediator_dart> mediator,
  int target_ring_fd,
  ffi.Pointer<mediator_message> message,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<mediator_dart>, ffi.Pointer<mediator_message>)>(symbol: 'mediator_dart_callback_to_native', assetId: 'mediator-bindings', isLeaf: true)
external void mediator_dart_callback_to_native(
  ffi.Pointer<mediator_dart> mediator,
  ffi.Pointer<mediator_message> message,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<mediator_dart>, ffi.Int)>(symbol: 'mediator_dart_cqe_advance', assetId: 'mediator-bindings', isLeaf: true)
external void mediator_dart_cqe_advance(
  ffi.Pointer<mediator_dart> mediator,
  int count,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<mediator_dart>)>(symbol: 'mediator_dart_destroy', assetId: 'mediator-bindings', isLeaf: true)
external void mediator_dart_destroy(
  ffi.Pointer<mediator_dart> mediator,
);

final class mediator_message extends ffi.Struct {
  @ffi.Uint64()
  external int id;

  @ffi.Uint64()
  external int source;

  @ffi.Uint64()
  external int target;

  @ffi.Uint64()
  external int owner;

  @ffi.Uint64()
  external int method;

  external ffi.Pointer<ffi.Void> input;

  @ffi.Size()
  external int input_size;

  external ffi.Pointer<ffi.Void> output;

  @ffi.Size()
  external int output_size;

  @ffi.Uint16()
  external int flags;
}

final class mediator_completion_event extends ffi.Struct {
  @ffi.UnsignedLongLong()
  external int user_data;

  @ffi.Int()
  external int res;

  @ffi.UnsignedInt()
  external int flags;

  @ffi.Array.multi([2])
  external ffi.Array<ffi.UnsignedLongLong> big_cqe;
}

final class mediator_module_dart_configuration extends ffi.Struct {
  @ffi.Size()
  external int quota_size;

  @ffi.Size()
  external int preallocation_size;

  @ffi.Size()
  external int slab_size;

  @ffi.Size()
  external int static_buffers_capacity;

  @ffi.Size()
  external int static_buffer_size;

  @ffi.Size()
  external int ring_size;

  @ffi.Double()
  external double delay_randomization_factor;

  @ffi.Uint64()
  external int max_delay_micros;

  @ffi.Uint64()
  external int cqe_wait_timeout_millis;

  @ffi.Uint32()
  external int ring_flags;

  @ffi.Uint32()
  external int base_delay_micros;

  @ffi.Uint32()
  external int cqe_wait_count;

  @ffi.Uint32()
  external int cqe_peek_count;
}

final class mediator_module_native_configuration extends ffi.Struct {
  @ffi.Uint64()
  external int cqe_wait_timeout_millis;

  @ffi.Size()
  external int quota_size;

  @ffi.Size()
  external int preallocation_size;

  @ffi.Size()
  external int slab_size;

  @ffi.Size()
  external int static_buffers_capacity;

  @ffi.Size()
  external int static_buffer_size;

  @ffi.Size()
  external int ring_size;

  @ffi.Int32()
  external int ring_flags;

  @ffi.Uint32()
  external int cqe_wait_count;

  @ffi.Uint32()
  external int cqe_peek_count;
}

final class io_uring extends ffi.Opaque {}

final class io_uring_cqe extends ffi.Opaque {}

final class mediator_dart extends ffi.Struct {
  external ffi.Pointer<io_uring> ring;

  @ffi.Size()
  external int ring_size;

  @ffi.Uint64()
  external int cqe_wait_timeout_millis;

  @ffi.Uint64()
  external int max_delay_micros;

  @ffi.Double()
  external double delay_randomization_factor;

  external ffi.Pointer<ffi.Pointer<mediator_dart_completion_event>> completions;

  @ffi.Int32()
  external int descriptor;

  @ffi.Uint32()
  external int ring_flags;

  @ffi.Uint32()
  external int cqe_wait_count;

  @ffi.Uint32()
  external int cqe_peek_count;

  @ffi.Uint32()
  external int base_delay_micros;

  @ffi.Uint8()
  external int id;
}

typedef mediator_dart_completion_event = io_uring_cqe;
